--- a/docker/Dockerfile.local
+++ b/docker/Dockerfile.local
@@ -2,8 +2,8 @@
 # https://docs.docker.com/engine/userguide/eng-image/multistage-build/
 FROM gobuffalo/buffalo:v0.12.4 as builder
 
-RUN mkdir -p $GOPATH/src/git.yale.edu/spinup/tweaser
-WORKDIR $GOPATH/src/git.yale.edu/spinup/tweaser
+RUN mkdir -p $GOPATH/src/github.com/YaleSpinup/tweaser
+WORKDIR $GOPATH/src/github.com/YaleSpinup/tweaser
 
 ADD . .
 RUN dep ensure
@@ -18,13 +18,12 @@ WORKDIR /bin/
 COPY --from=builder /bin/app .
 
 # Uncomment to run the binary in "production" mode:
-# ENV GO_ENV=production
+ENV GO_ENV=local
 
 # Bind the app to 0.0.0.0 so it can be seen from outside the container
 ENV ADDR=0.0.0.0
 
 EXPOSE 3000
 
-# Uncomment to run the migrations before running the binary:
 # CMD /bin/app migrate; /bin/app
 CMD exec /bin/app
