--- a/database.yml
+++ b/database.yml
@@ -7,6 +7,15 @@ development:
   password: "secret"
   encoding: "utf8mb4_general_ci"
 
+local:
+  dialect: "mysql"
+  database: "tweaser_development"
+  host: "mysql"
+  port: "3306"
+  user: "root"
+  password: "secret"
+  encoding: "utf8mb4_general_ci"
+
 test:
   url: {{envOr "TEST_DATABASE_URL" "mysql://root:root@(localhost:3306)/tweaser_test?parseTime=true&multiStatements=true&readTimeout=1s"}}
 
