--- a/database.yml
+++ b/database.yml
@@ -17,7 +17,13 @@ local:
   encoding: "utf8mb4_general_ci"
 
 test:
-  url: {{envOr "TEST_DATABASE_URL" "mysql://root:root@(localhost:3306)/tweaser_test?parseTime=true&multiStatements=true&readTimeout=1s"}}
+  dialect: {{envOr "DB_DIALECT" "mysql"}}
+  database: {{envOr "DB_DATABASE" "tweaser_test"}}
+  host: {{envOr "DB_HOST" "127.0.0.1"}}
+  port: {{envOr "DB_PORT" "3306"}}
+  user: {{envOr "DB_USER" "root"}}
+  password: {{envOr "DB_PASS" "root"}}
+  encoding: {{envOr "DB_ENCODING" "utf8mb4_general_ci"}}
 
 production:
   dialect: {{envOr "DB_DIALECT" "mysql"}}
