Move to YaleSpinup org

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,8 +2,8 @@
 # https://docs.docker.com/engine/userguide/eng-image/multistage-build/
 FROM gobuffalo/buffalo:v0.12.4 as builder
 
-RUN mkdir -p $GOPATH/src/github.com/YaleUniversity/tweaser
-WORKDIR $GOPATH/src/github.com/YaleUniversity/tweaser
+RUN mkdir -p $GOPATH/src/github.com/YaleSpinup/tweaser
+WORKDIR $GOPATH/src/github.com/YaleSpinup/tweaser
 
 ADD . .
 RUN dep ensure
