--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -26,7 +26,7 @@ WORKDIR /bin/
 COPY --from=builder /bin/app .
 COPY docker/*_config.sh /bin
 
-ENV GO_ENV=development
+ENV GO_ENV=production
 ENV PORT=8080
 ENV ADDR=0.0.0.0
 
