update go dependencies and buffalo

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,25 +1,22 @@
-# This is a multi-stage Dockerfile and requires >= Docker 17.05
-# https://docs.docker.com/engine/userguide/eng-image/multistage-build/
-FROM gobuffalo/buffalo:v0.16.15 as builder
+FROM gobuffalo/buffalo:v0.18.7 as builder
 
 ARG version=0.0.0
 ARG prerelease
 ARG githash=""
 ARG buildstamp=""
 
+RUN mkdir /app
+WORKDIR /app
+COPY go.mod .
+COPY go.sum .
+RUN go mod download && go version
 ADD . .
 RUN buffalo build --static -o /bin/app --ldflags "-X github.com/YaleSpinup/tweaser/tweaser.Version=$version -X github.com/YaleSpinup/tweaser/tweaser.VersionPrerelease=$prerelease -X github.com/YaleSpinup/tweaser/tweaser.githash=$githash -X github.com/YaleSpinup/tweaser/tweaser.buildstamp=$buildstamp"
 
-FROM alpine
-RUN apk add --no-cache bash
-RUN apk add --no-cache python3
-RUN ln -s /usr/bin/python3 /usr/bin/python
-RUN apk add --no-cache ca-certificates
-RUN apk add --no-cache wget gettext && \
-    wget -nv "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" && \
-    unzip awscli-bundle.zip && \
-    ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws && \
-    /usr/local/bin/aws --version
+FROM python:3-alpine
+RUN apk add --no-cache bash ca-certificates && \
+    pip3 install awscli --upgrade && \
+    aws --version
 
 WORKDIR /bin/
 
@@ -31,5 +28,8 @@ ENV PORT=8080
 ENV ADDR=0.0.0.0
 
 EXPOSE 8080
+
+RUN chown -R nobody:nogroup .
+USER nobody
 
 CMD /bin/import_config.sh && /bin/app migrate; /bin/app
